--- a/client/src/components/MovieActions/style.module.scss
+++ b/client/src/components/MovieActions/style.module.scss
@@ -7,9 +7,8 @@
 .editButton {
   text-decoration: none;
   font-size: 12px;
-  background-color: #007bff; /* Adjust the background color */
-  color: #fff; /* Text color */
-  border: none;
+  background-color: #007bff; 
+  color: #fff; 
   padding: 5px 8px;
   margin: 10px;
   border-radius: 5px;
