--- a/client/src/components/MovieReviewSection/style.module.scss
+++ b/client/src/components/MovieReviewSection/style.module.scss
@@ -3,7 +3,7 @@
   width: 40%;
 
   .reviewList {
-    list-style-type: none; /* Remove bullets */
+    list-style-type: none; 
     padding: 0;
 
     .reviewItem {
