--- a/client/src/components/MovieList/style.module.scss
+++ b/client/src/components/MovieList/style.module.scss
@@ -1,14 +1,17 @@
 .moviesList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 400px;
+  grid-auto-rows: 400px;
+  grid-gap: 30px;
   padding: 20px;
 }
 
 @media screen and (max-width: 768px) {
-  .moviesList {
-    flex-direction: column;
-    align-items: center;
+  .moviesList { 
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    grid-template-rows: 200px;
+    grid-auto-rows: 200px;
   }
 }
